--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="output.css">
 </head>
 <body>
-    <header class="bg-[#05394A] w-100% h-100vh text-white mb-70px pb-16">
+    <header class="max-w-[1200px] m-auto bg-[#05394A] w-100% h-100vh text-white mb-70px pb-16">
         <nav class="flex justify-around pt-7">
             <img src="Group 44.png" width="77px" height="37px" alt="">
             <article class=" gap-7 hidden lg:flex">
@@ -34,8 +34,8 @@
     </aside>
     </section>
 </header>
-<main class="mb-70px">
-    <section class=" border-black border-[1px] border-solid flex  w-[300px] lg:w-[600px] lg:h-[150px]  text-[#08546C] bg-white p-[20px] flex-col lg:ml-[400px] ml-[80px] 	position: absolute; bottom-[100px] ">
+<main class="mb-70px max-w-[1200px] m-auto">
+    <section class=" border-black border-[1px] border-solid flex  w-[350px] lg:w-[600px] lg:h-[150px]  text-[#08546C] bg-white p-[20px] flex-col lg:ml-[400px] mb-[50px] relative bottom-[100px]">
         <h1 class="text-2xl mb-5">STATISTIC</h1>
         <aside class="flex gap-7 ">
         <article>
@@ -155,7 +155,7 @@ Every element is geared to create maximum appeal.</p><br>
         </article>
     </section>
 </main>
-<footer class="flex flex-col items-center lg:flex-row lg:justify-around pt-[50px] pb-[50px]">
+<footer class="max-w-[1200px] m-auto flex flex-col items-center lg:flex-row lg:justify-around pt-[50px] pb-[50px]">
     <section>
          <img src="Group 45.png" width="77px" height="37px" class="mb-[20px]" alt="">
         <p>Lorem ipsum dolor sit amet, consectetur <br>adipiscing elit. Lectus mattis nunc <br>aliquam tincidunt est non.</p> <br>
